tree-sitter-snakemake-wildcards/test/corpus/wildcards.txt
===============================================================================
Wildcards
===============================================================================

aaa{wc1}aaa{{{wc2}aaa{wc3}}}{wc

-------------------------------------------------------------------------------

(string
 (wildcard
  (identifier))
 (wildcard
  (identifier))
 (wildcard
  (identifier)))


===============================================================================
Constraints
===============================================================================

aaa{wc1,\d+}

-------------------------------------------------------------------------------

(string
 (wildcard
  (identifier)
  (constraint))
 )
